a821e6da4f16daca8938ad2343006c2970ff400b Fix: Links could be virtually invisible against a selected row's tint
https://datatables.net/forums/discussion/72942

Sync to source repo @a821e6da4f16daca8938ad2343006c2970ff400b

--- a/css/jquery.dataTables.css
+++ b/css/jquery.dataTables.css
@@ -280,6 +280,9 @@ table.dataTable tbody tr.selected > * {
   box-shadow: inset 0 0 0 9999px rgba(13, 110, 253, 0.9);
   color: white;
 }
+table.dataTable tbody tr.selected a {
+  color: #090a0b;
+}
 table.dataTable tbody th,
 table.dataTable tbody td {
   padding: 8px 10px;
